--- a/Brief4/formModifierClub.html
+++ b/Brief4/formModifierClub.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styleFAC.css">
+    <link rel="stylesheet" href="Css/styleFAC.css" />
     <title>formulaire d'ajoute un club</title>
   </head>
   <body>
     <div class="wrapper">
-      <h2>Formulaire d'ajouter un Club</h2>
+      <h2>Formulaire de modifier un Club</h2>
       <form>
         <div class="input-box">
           <input type="text" placeholder="La nom de club" required />
@@ -18,11 +18,7 @@
           <input type="file" id="logo" accept="image" required />
         </div>
         <div class="descreption">
-          <textarea
-            placeholder="description de club"
-            required
-          ></textarea
-          >
+          <textarea placeholder="description de club" required></textarea>
         </div>
         <div class="input-box Btn">
           <input type="submit" value="Valider" />
